# Classy-JSON

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: flake8.yml
classy_json/: CustomDict.py  CustomList.py  CustomTypes.py  __init__.py
classyjson/: ClassyJson.py  CustomTypes.py  CustomTypes.pyx  Types.py  __init__.py  types.py  types.pyx
tests/: test.py  test_large.json  test_main.py  time_test.py
